--- a/dataAccessCode/src/test/resources/application.properties
+++ b/dataAccessCode/src/test/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=test
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
-spring.datasource.password=
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
 
 logging.level.org.springframework.jdbc=debug
