--- a/dataAccessCode/build.gradle
+++ b/dataAccessCode/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	//H2 데이터베이스 추가
 	runtimeOnly 'com.h2database:h2'
 
+	//JPA, 스프링 데이터 JPA 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
