--- a/dataAccessCode/build.gradle
+++ b/dataAccessCode/build.gradle
@@ -9,7 +9,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 
-	/**Step1 querydsl plugin 추가-*/
+	/**querydsl 추가*/
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 
 	id 'java'
